--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -26,4 +27,19 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+
+
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
 }
+
+test {
+    useJUnitPlatform()
+}
+
+task hello {
+    doLast {
+        println "hello world"
+    }
+}
+
