--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,11 @@ dependencies {
     implementation 'com.google.guava:guava:28.1-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testCompile 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+
+    testImplementation('junit:junit:4.12')
 }
 
 test {
